# sampgdk

./: .CMakeLists.txt.swp  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gittrees  .travis.yml  CHANGES.txt  CMakeLists.txt  CMakeLists.txt.template  Doxyfile  Doxyfile.in  GenerateProjects.bat  Makefile  Makefile.am  README  README-gcc  README.md  README.txt  VERSION.txt  _config.yml  appveyor.yml  cidl.py  configure  configure.ac  configure.bat  helloworld.cpp  helloworld.def  helloworld.h  helloworld.sln  helloworld.vcproj  helloworld.vcxproj  index.html  index.md  jump.cpp  jump.h  nativegen.py  natives.cpp  natives.sln  natives.vcxproj  (+14 more)
autotools/: Makefile.am  configure.ac
cmake/: AMXConfig.cmake  AddSAMPPlugin.cmake  AmxConfig.cmake  BuildConfig.cmake  CMakeLists.txt  FindGDK.cmake  FindSAMPGDK.cmake  FindSAMPSDK.cmake  GlobalBuildConfig.cmake  ParseVersionString.cmake  Plugin.cmake  Toolchain-clang.cmake  Toolchain-i586-mingw32msvc.cmake  Toolchain-intel.cmake  sampgdk-config.cmake.in
cmake/Modules/: AddTargetCompileFlags.cmake  AddTargetDefinitions.cmake  AddTargetIncludeDirs.cmake  AddTargetLinkFlags.cmake  AmxConfig.cmake  CheckHeader.cmake  FindDynCall.cmake  FindGDK.cmake  FindGDK4.cmake  FindSDK.cmake  FindSampGdk3.cmake  FindSampgdk3.cmake  GroupTargetSources.cmake  ParseVersionString.cmake  Plugin.cmake  PluginTest.cmake  ReadVersionFromFile.cmake  SampPlugin.cmake  TargetProperties.cmake
cmake/Toolchain/: GCC.cmake
doc/: CMakeLists.txt  Doxyfile.in  how-to-use-amalgamation.txt
doc/html/: a__actor_8h_source.html  a__http-decl_8h_source.html  a__http_8h.html  a__http_8h_source.html  a__objects-decl_8h_source.html  a__objects_8h.html  a__objects_8h_source.html  a__players-decl_8h_source.html  a__players_8h.html  a__players_8h_source.html  a__samp-decl_8h_source.html  a__samp_8h.html  a__samp_8h_source.html  a__vehicles-decl_8h_source.html  a__vehicles_8h.html  a__vehicles_8h_source.html  annotated.html  bool_8h.html  bool_8h_source.html  classes.html  common_8h_source.html  core_8h.html  core_8h_source.html  dir_0996a9f46d4d2c489fbd24cd6889fcf3.html  dir_09d272b2fc1578cda0993d1448cc0b3b.html  dir_0a872eaedae14c9fde91bb92368635eb.html  dir_1036c581a2a10e9bdf4670f5b7bebadf.html  dir_1043fd16b6a8388e63ae05ed58a268f2.html  dir_17e6476bb9233180715621fb0ffcd504.html  dir_19437fb65f460003d6e989c1c509a0ca.html  dir_1bd108f84c07d181651a095f6a642d7b.html  dir_1c39f131c40491cddfdb69f08ba31a58.html  dir_1e1fc12d8b6cd44f1833b417c2ef34bd.html  dir_20b3195a635214615df648d4fa103f28.html  dir_21c86d2e75da377ff166bca7bd05af5f.html  dir_246883923ac4e2d41fc9056eaca9be5e.html  dir_3084f45c878b9a9e5df1801616700e9a.html  dir_30c91e9f4ce73ad0dc2a6f77338dd693.html  dir_315ca952586ac03e04893e7928df8bb8.html  dir_31cff8085e5ed25b45cbd70e8a195505.html  (+82 more)
examples/helloworld/: .gitignore  CMakeLists.txt  GNUMakefile  Makefile  amxplugin.cpp  helloworld.cbp  helloworld.cpp  helloworld.def  helloworld.h  helloworld.sln  helloworld.vcproj  helloworld.vcxproj
examples/lvdm/: AUTHORS.txt  CMakeLists.txt  GNUMakefile  lvdm.cpp  lvdm.def
examples/unlimitedfs/: .gitignore  CMakeLists.txt  GNUMakefile  README.txt  dlfcn.h  filterscript.cpp  filterscript.h  plugin.cpp  plugin.h  unlimitedfs.cpp  unlimitedfs.def
include/sampgdk/: .gitignore  CMakeLists.txt  a_http.h  a_objects.h  a_objects.hpp  a_players.h  a_players.hpp  a_samp.h  a_samp.hpp  a_vehicles.h  a_vehicles.hpp  amx.h  amxplugin.h  bool.h  callbacks.h  callnative.hpp  compat.h  config.h  core.h  core.hpp  eventhandler.h  export.h  gpci.h  interop.h  logprintf.h  objects.h  platform.h  players.h  plugin.h  plugincommon.h  samp.h  sampgdk.h  sdk.h  static-assert.h  stdbool.h  timers.h  types.h  vehicles.h  version.h  version.h.cmake  (+2 more)
lib/: CMakeLists.txt  amxplugin.cpp
lib/python/: CMakeLists.txt
lib/sampgdk/: CMakeLists.txt  a_actor.idl  a_http.idl  a_objects.idl  a_players.idl  a_samp.idl  a_samp.idl.c  a_vehicles.idl  core.api  core.c  interop.api  interop.c  sampgdk.c  sampgdk.h  sampgdk.rc  version.api  version.c
lib/subhook/: CMakeLists.txt  subhook-private.h  subhook.c  subhook.h  subhook_linux.c  subhook_windows.c  subhook_x86.c
plugins/: CMakeLists.txt
plugins/blank/: CMakeLists.txt  generate_blank_plugin.py
plugins/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.def
plugins/lvdm/: AUTHORS.txt  CMakeLists.txt  lvdm.cpp  lvdm.def
plugins/ufs/: CMakeLists.txt  README.md  README.txt  callbacks-export.cpp  callbacks.bat  callbacks.cpp  callbacks.h  callbacks.py  callbacks.sh  generate_callbacks.py  plugin.cpp  plugin.h  rcon.cpp  rcon.h  script.cpp  script.h  ufs-plugin.cpp  ufs-plugin.def  ufs.cpp  ufs.h
plugins/unlimitedfs/: CMakeLists.txt  README.txt  filterscript.cpp  filterscript.h  plugin.cpp  plugin.h  unlimitedfs.cpp
samples/: CMakeLists.txt
samples/helloworld/: .gitignore  CMakeLists.txt  GNUMakefile  helloworld.cpp
samples/lvdm/: CMakeLists.txt  lvdm.cpp
samples/unlimitedfs/: CMakeLists.txt  README.txt  plugin.cpp  plugin.h  unlimitedfs.cpp
src/: .gitignore  CMakeLists.txt  a_http.c  a_http.idl  a_objects.c  a_objects.cpp  a_objects.idl  a_players.c  a_players.cpp  a_players.idl  a_samp.c  a_samp.cpp  a_samp.idl  a_vehicles.c  a_vehicles.cpp  a_vehicles.idl  amx-stack.c  amx-stack.h  amx.c  amx.h  amxapihooks.cpp  amxapihooks.h  amxhooks.cpp  amxhooks.h  amxplugin.cpp  amxplugin.def  arg.c  arg.h  array.c  array.h  asm-gcc.c  asm-msvc.c  asm.h  call.asm  call.h  callback.c  callback.h  callbacks.cpp  callbacks.h  codegen.cmake  (+95 more)
src/amx/: amx.c
src/game/: fakeamx.cpp  fakeamx.h  objects.cpp  players.cpp  samp.cpp  vehicles.cpp
src/internal/: CMakeLists.txt  amx.h  amxhooks.c  array.c  array.h  callback.c  callback.h  fakeamx.c  fakeamx.h  hook.c  hook.h  hooks.c  init.list  likely.h  log.c  log.h  logprintf.c  native.c  native.h  param.c  param.h  plugin-posix.c  plugin-win32.c  plugin.c  plugin.h  timer-posix.c  timer-win32.c  timer.c  timer.h  utils.h
src/plugin/: amxplugin.cpp
src/private/: CMakeLists.txt  amx-stack.c  amx-stack.h  amx.h  arg.h  array.c  array.h  (+25 more)
(+268 files in other folders)
