lib_LTLIBRARIES = libsampgdk.la

libsampgdk_la_CPPFLAGS = -DLINUX -Iinclude -Iinclude/samp/plugin/amx
libsampgdk_la_CXXFLAGS = -Wall 

libsampgdk_la_SOURCES = \
	src/game/fakeamx.cpp\
	src/game/objects.cpp\
	src/game/players.cpp\
	src/game/samp.cpp\
	src/game/vehicles.cpp\
	src/plugin/amxplugin.cpp\
	src/wrapper/callbacks.cpp\
	src/wrapper/eventhandler.cpp\
	src/wrapper/jump.cpp\
	src/wrapper/wrapper.cpp\
	src/logprintf.cpp
