set_property(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" APPEND PROPERTY
             LIBRARIES "subhook")

if(SAMPGDK_STATIC)
	set_property(DIRECTORY "${CMAKE_SOURCE_DIR}" APPEND PROPERTY
	             COMPILE_DEFINITIONS "SUBHOOK_EXPORT=" "SUBHOOK_API=")
else()
	set(SUBHOOK_STATIC TRUE)
endif()

add_subdirectory("subhook")

file(RELATIVE_PATH folder ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
set_property(TARGET subhook PROPERTY FOLDER "${folder}")